# aixd

./: .gitignore  CMakeLists.txt  localai.json
include/: aixd.h  log_.h  rksound.h  sound.hpp
include/simpleweb/: ws_client.hpp  ws_server.hpp
src/: HoushanEngine.hpp  HuoshanEngine.hpp  ai.cpp  aixd.cpp  rksound.cpp  sound.hpp
